[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathaniel Ledford", email = "nate@nateledford.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.27.0",
    "httpx>=0.28.1",
    "robyn",
]

[project.scripts]
chaos = "chaos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.0a8",
]

[tool.ty.src]
root = "./src"
