[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathaniel Ledford", email = "nate@nateledford.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "robyn>=0.66.2",
]

[project.scripts]
chaos = "chaos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ty>=0.0.0a8",
]

[tool.ty.src]
root = "./src"
