[project]
name = "chaos"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathaniel Ledford", email = "nate@nateledford.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "robyn>=0.66.2",
]

[project.scripts]
chaos = "chaos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "ty>=0.0.1a5",
    "uv-bump>=0.1.2",
]

[tool.ty.src]
root = "./src"
